[package]
name = "fz-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
futures = "0.3.28"
libc = "0.2.147"
pnet = "0.33.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
socket2 = "0.5.1"
tokio = { version = "1.28", features = ["full"] }
